--- a/in-class_website/styles.css
+++ b/in-class_website/styles.css
@@ -33,9 +33,16 @@ td {
   padding-top: 10px;
   margin-top: 10px;
 }
+input .form-control {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  margin-left: 16px !important;
+  margin-right: 16px !important;
+}
 /* End of PHP */
 body {
   background-color: #27272a;
+  margin: 16px auto;
 }
 .navbar {
   background-color: #ff6e31 !important;
